# o7p

./: CMakeLists.txt  README.md
src/compiler/: CMakeLists.txt  parser.cpp  parser.h
src/generator/: CMakeLists.txt  generator.h  generator_c.cpp  generator_c.h
src/launcher/: main.cpp
src/lib/: baselib.c  baselib.h
src/object_model/: CMakeLists.txt  declaration.cpp  declaration.h  designator.cpp  designator.h  expression.cpp  expression.h  operator.h  procedure.cpp  procedure.h  saveload.cpp  saveload.h  statement.cpp  statement.h  validate.cpp  validate.h
src/smodel/: CMakeLists.txt  const.cpp  const.h  context.cpp  context.h  creator.cpp  creator.h  import.cpp  import.h  instruction.h  module.cpp  module.h  operand.cpp  operand.h  procedure_context.cpp  procedure_context.h  type.cpp  type.h  type_context.cpp  type_context.h  variable.cpp  variable.h
workspace/c/examples/: hello_world.c  sort.c
workspace/def/examples/: hello_world.def  sort.def
workspace/h/examples/: hello_world.h  sort.h
workspace/o7/examples/: hello_world.o7  sort.o7
workspace/o7/import/: ModuleA.o7  ModuleB.o7
workspace/o7/ut/fail/: 01.o7  02.o7  03.o7  04.o7  05.o7  06.o7
workspace/o7/ut/success/: assigment.o7  base_statement.o7  decl.o7  set.o7  state.o7
